--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-10">
-        <%= render 'shared/errors'%>
-                <%= form_with(model: @article,class:"shadow p-3 mb-5 bg-info rounded", local: true) do |f| %>
+        <%= render 'shared/errors', obj: @article %>
+                <%= form_with(model: @article,class:"shadow p-3 mb-5 bg-info rounded", local: true, data: {turbo: false}) do |f| %>
                 <div class="form-group now">
                 
                     <%= f.label :title, class:"col-2 col-form-label text-light" %><br/>
