--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="form-group now justify-content-center">
-                    <%= f.submit "Sign Up", class:"btn btn-outline-light btn-lg"%>
+                    <%= f.submit(@user.new_record? ? "Sign Up" : "Update Account", class:"btn btn-outline-light btn-lg")%>
                 </div>
         <% end %>
         </div>
