--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
 
 <%= gravatar_for @user, size: 200 %>
 
+<div class="text-center mt-4">
+  <%= link_to "Edit Profile", edit_user_path(@user), class:"btn btn-outline-info" %>
+</div>
+
 <h2 class="text-center mt-4">Articles</h2>
 
 <%= render 'articles/article'%>
