--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,22 +3,10 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-10">
-        <%= render 'shared/errors', obj: @category %>
-                <%= form_with(model: @category,class:"shadow p-3 mb-5 bg-info rounded", local: true, data: {turbo: false}) do |f| %>
-                <div class="form-group now">
-                
-                    <%= f.label :name, "Category name",class:"col-2 col-form-label text-light" %><br/>
-                    <div class="col-10">
-                    <%= f.text_field :name, class:"form-control shadow rounded", placeholder:"Enter a username"%>
-                    </div>
-                </div>
-                <div class="form-group now justify-content-center">
-                    <%= f.submit class:"btn btn-outline-light btn-lg"%>
-                </div>
-        <% end %>
+        < <%= render 'form' %>
         </div>
         <div class="mb-3">
-            <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+            <%= link_to '[ Cancel and return to categories listing ]', categories_path, class: "text-info" %>
         </div>
     </div>
 </div>
